--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "discord.js": "^14.16.1",
-    "ky": "^1.7.2"
+    "ky": "^1.7.2",
+    "lunarphase-js": "^2.0.3"
   }
 }
