--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "globals": "^15.9.0"
   },
   "dependencies": {
+    "chrono-node": "^2.7.6",
+    "dayjs": "^1.11.13",
     "discord.js": "^14.16.1",
     "ky": "^1.7.2",
     "lunarphase-js": "^2.0.3"
